--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(4px + 2vmin);
   color: white;
 }
 
@@ -20,7 +20,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(6px + 2vmin);
   color: white;
 }
 
@@ -28,8 +28,19 @@ body {
   color: #61dafb;
 }
 
+.cities {
+  color: rgb(255, 195, 82);
+  text-align: center;
+  padding: 10px;
+}
+
+/* h1 {
+  margin-top: 5px;
+  margin-bottom: 5px;
+} */
+
 input {
-  padding: .5rem;
+  padding: .2rem;
   font-size: 16px;
   width: 100%;
   display: block;
@@ -56,7 +67,7 @@ input.error {
 button {
   max-width: 150px;
   margin: 20px 0;
-  padding: 12px 20px;
+  padding: 8px 20px;
   border-style: none;
   border-radius: 5px;
   background-color: #08c;
