--- a/src/components/weatherGrid.css
+++ b/src/components/weatherGrid.css
@@ -1,34 +1,30 @@
-.grid-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-areas: ". ." ". ." ". ." ". ." ". ." ". ." ". ." ". .";
-  }
-
-  .parent { 
-    display: grid; 
-    grid-template-columns: 1fr 1fr; 
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr; 
-    grid-column-gap: 0px;
-    grid-row-gap: 0px; 
-    .div1 { grid-area: 1 / 1 / 2 / 2; } 
-    .div2 { grid-area: 1 / 2 / 2 / 3; } 
-    .div3 { grid-area: 2 / 1 / 3 / 2; } 
-    .div4 { grid-area: 2 / 2 / 3 / 3; } 
-    .div5 { grid-area: 3 / 1 / 4 / 2; } 
-    .div6 { grid-area: 3 / 2 / 4 / 3; } 
-    .div7 { grid-area: 4 / 1 / 5 / 2; } 
-    .div8 { grid-area: 4 / 2 / 5 / 3; } 
-    .div9 { grid-area: 5 / 1 / 6 / 2; } 
-    .div10 { grid-area: 5 / 2 / 6 / 3; } 
-    .div11 { grid-area: 6 / 1 / 7 / 2; } 
-    .div12 { grid-area: 6 / 2 / 7 / 3; } 
-    .div13 { grid-area: 7 / 1 / 8 / 2; } 
-    .div14 { grid-area: 7 / 2 / 8 / 3; } 
-    .div15 { grid-area: 8 / 1 / 9 / 2; } 
-    .div16 { grid-area: 8 / 2 / 9 / 3; } 
-    .div17 { grid-area: 9 / 1 / 10 / 2; } 
-    .div18 { grid-area: 9 / 2 / 10 / 3; } 
-    .div19 { grid-area: 10 / 1 / 11 / 2; } 
-    .div20 { grid-area: 10 / 2 / 11 / 3; } 
-    }
+.tg {
+  border-collapse: collapse;
+  border-spacing: 0;
+  margin: 0px auto;
+}
+.tg td {
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  padding: 10px 5px;
+  border-style: solid;
+  border-width: 1px;
+  overflow: hidden;
+  word-break: normal;
+  border-color: white;
+}
+.tg th {
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  font-weight: normal;
+  padding: 10px 5px;
+  border-style: solid;
+  border-width: 1px;
+  overflow: hidden;
+  word-break: normal;
+  border-color: white;
+}
+.tg .tg-0lax {
+  text-align: left;
+  vertical-align: top;
+}
